--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mongoose": "^5.3.4",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.4",
+    "underscore": "^1.9.1",
+    "uniqid": "^5.0.3",
+    "uuid": "^3.3.2",
     "validator": "^10.8.0"
   }
 }
